Resolve a minor issue conflicting with scrolling on smaller devices

--- a/src/Stylesheets/menu.css
+++ b/src/Stylesheets/menu.css
@@ -11,21 +11,24 @@
   font-style: normal;
 }
 body {
+  width: 100vw;
+  height: 100vh;
   background: #000;
   color: #fff;
   margin: 0;
   font-size: 16px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 main, main article {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 main article {
   padding-bottom: 100px;
   box-sizing: border-box;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .breathingFragment {
@@ -373,7 +376,7 @@ nav #expansionArrow .R {
 
 @media only screen and (max-width: 900px) {
   nav {
-    width: auto;
+    width: 0;
     top: inherit;
     bottom: 20%;
   }
